Update samples for compat with latest SDK

--- a/OnExitSurveySample/OnExitSurveySample/foresee_configuration.json
+++ b/OnExitSurveySample/OnExitSurveySample/foresee_configuration.json
@@ -1,6 +1,6 @@
 {
   "clientId":"Ij6P1lfZHchO/co10lQ4BQ==",
-  "notificationType":"ON_EXIT",
+  "notificationType":"CONTACT",
   "measures":
   [
     {
