Fix Spanish language SID

--- a/InternationalizationSample/InternationalizationSample/es.lproj/foresee_configuration.json
+++ b/InternationalizationSample/InternationalizationSample/es.lproj/foresee_configuration.json
@@ -5,7 +5,7 @@
 	"measures":
 	[
     {
-      "surveyId":"app_test_1-es",
+      "surveyId":"app_test_1-sp",
       "daysSinceLaunch":0,
       "launchCount":0
     }
