Update clientId and sid in most apps

--- a/BasicSample/BasicSample/foresee_configuration.json
+++ b/BasicSample/BasicSample/foresee_configuration.json
@@ -1,9 +1,9 @@
 {
-	"clientId":"Ij6P1lfZHchO/co10lQ4BQ==",
+	"clientId":"FSRTESTINGCODECID12345==",
 	"measures":
 	[
 		{
-			"surveyId":"app_test_1",
+			"surveyId":"iphone_app_QA",
 			"daysSinceLaunch":0,
 			"launchCount":0,
 			"significantEventThresholds":
