--- a/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
+++ b/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-  "clientId":"Ij6P1lfZHchO/co10lQ4BQ==",
+  "clientId":"FSRTESTINGCODECID12345==",
   "notificationType":"LOCAL",
   "measures":
   [
     {
-      "surveyId":"app_test_1",
+      "surveyId":"iphone_app_QA",
       "daysSinceLaunch":0,
       "launchCount":0
     }
