--- a/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-	"clientId":"Ij6P1lfZHchO/co10lQ4BQ==",
-    "notificationType":"CONTACT",
+	"clientId":"FSRTESTINGCODECID12345==",
+  "notificationType":"CONTACT",
 	"measures":
 	[
 		{
-			"surveyId": "app_test_1",
+			"surveyId": "iphone_app_QA",
 			"launchCount": 0
 		}
 	]
