--- a/CustomInvitationSample/foresee_configuration.json
+++ b/CustomInvitationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-	"clientId":"Ij6P1lfZHchO/co10lQ4BQ==",
-    "notificationType":"IN_SESSION",
+	"clientId":"FSRTESTINGCODECID12345==",
+  "notificationType":"IN_SESSION",
 	"measures":
 	[
 		{
-			"surveyId": "app_test_1",
+			"surveyId":"iphone_app_QA",
 			"launchCount": 0
 		}
 	]
