--- a/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-	"clientId":"FSRTESTINGCODECID12345==",
+	"clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
   "notificationType":"CONTACT",
 	"measures":
 	[
 		{
-			"surveyId": "iphone_app_QA",
+			"surveyId": "mobile_app-en",
 			"launchCount": 0
 		}
 	]
