--- a/CustomInvitationSample/foresee_configuration.json
+++ b/CustomInvitationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-	"clientId":"FSRTESTINGCODECID12345==",
+	"clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
   "notificationType":"IN_SESSION",
 	"measures":
 	[
 		{
-			"surveyId":"iphone_app_QA",
+			"surveyId":"mobile_app-en",
 			"launchCount": 0
 		}
 	]
