--- a/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
+++ b/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-  "clientId":"FSRTESTINGCODECID12345==",
+  "clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
   "notificationType":"LOCAL",
   "measures":
   [
     {
-      "surveyId":"iphone_app_QA",
+      "surveyId":"mobile_app-en",
       "daysSinceLaunch":0,
       "launchCount":0
     }
