MOBILSDK-2170: Review: Minor changes, including: - Brand color - Justifying text - Minor copy changes

--- a/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
@@ -1,11 +1,14 @@
 {
 	"clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
-  "notificationType":"CONTACT",
+    "notificationType":"CONTACT",
 	"measures":
 	[
 		{
 			"surveyId": "mobile_app-en",
 			"launchCount": 0
 		}
-	]
+    ],
+    "invite": {
+        "baseColor": [237, 38, 54]
+    }
 }
