MOBILSDK-1334: Changed local notification demo to use the EXIT_INVITE type

--- a/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
+++ b/LocalNotificationSample/LocalNotificationSample/foresee_configuration.json
@@ -1,6 +1,6 @@
 {
   "clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
-  "notificationType":"LOCAL",
+  "notificationType":"EXIT_INVITE",
   "measures":
     [{
      "surveyId":"mobile_app-en",
