--- a/InternationalizationSample/InternationalizationSample/fr.lproj/foresee_configuration.json
+++ b/InternationalizationSample/InternationalizationSample/fr.lproj/foresee_configuration.json
@@ -3,11 +3,13 @@
 	"repeatDaysAfterDecline":60,
 	"repeatDaysAfterComplete":120,
 	"measures":
-	[
-    {
+	[{
       "surveyId":"mobile_app-fr",
       "daysSinceLaunch":0,
       "launchCount":0
+    }],
+    "invite": {
+        "logo": "ForeSee_logo",
+        "baseColor": [237, 38, 54]
     }
-  ]
 }
