--- a/InternationalizationSample/InternationalizationSample/InternationalizationSample-Info.plist
+++ b/InternationalizationSample/InternationalizationSample/InternationalizationSample-Info.plist
@@ -29,7 +29,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Storyboard</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
