--- a/BasicSwiftSample/BasicSwiftSample/foresee_configuration.json
+++ b/BasicSwiftSample/BasicSwiftSample/foresee_configuration.json
@@ -1,17 +1,18 @@
 {
-	"clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
-	"measures":
-	[
-		{
-			"surveyId":"mobile_app-en",
-			"daysSinceLaunch":0,
-			"launchCount":0,
-			"significantEventThresholds":
-	        {
-	          "app_test_1": 4
-	        }
-		}
-	],
+    "clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
+    "notificationType": "IN_SESSION",
+    "measures":
+    [
+        {
+            "surveyId": "mobile_app-en",
+            "daysSinceLaunch": 0,
+            "launchCount": 0,
+            "significantEventThresholds":
+            {
+                "app_test_1": 4
+            }
+        }
+    ],
     "invite": {
         "logo": "ForeSee_logo",
         "baseColor": [237, 38, 54]
