MOBILSDK-2456: add required config values

--- a/FeedbackSample/FeedbackSample/foresee_configuration.json
+++ b/FeedbackSample/FeedbackSample/foresee_configuration.json
@@ -16,5 +16,11 @@
       }
     ],
     "surveyCompletionPageDelay":3
+  },
+  "notificationType": "IN_SESSION",
+  "measures": {},
+  "invite":
+  {
+    "baseColor": [237, 38, 54]
   }
 }
