--- a/FeedbackSample/FeedbackSample/foresee_configuration.json
+++ b/FeedbackSample/FeedbackSample/foresee_configuration.json
@@ -7,11 +7,11 @@
     "feedbackSurveys":[
       {
         "name":"Sample 1",
-        "feedbackId":"q9IvXiloOG"
+        "feedbackId":"AEvfwfp1vY"
       },
       {
         "name":"Sample 2",
-        "feedbackId":"gPzT3hhhSw",
+        "feedbackId":"AEvfwfp1vY",
         "surveyCompletionPageDelay":-1
       }
     ],
