added second feedback survey

--- a/FeedbackSample/FeedbackSample/foresee_configuration.json
+++ b/FeedbackSample/FeedbackSample/foresee_configuration.json
@@ -11,7 +11,7 @@
       },
       {
         "name":"Sample 2",
-        "feedbackId":"AEvfwfp1vY",
+        "feedbackId":"1k9SUBSgFN",
         "surveyCompletionPageDelay":-1
       }
     ],
