--- a/BasicSwiftSample/BasicSwiftSample.xcodeproj/xcshareddata/xcschemes/BasicSwiftSample.xcscheme
+++ b/BasicSwiftSample/BasicSwiftSample.xcodeproj/xcshareddata/xcschemes/BasicSwiftSample.xcscheme
@@ -53,12 +53,21 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
+            BlueprintIdentifier = "96B1EDA123746AE700CB911B"
+            BuildableName = "SwiftSample.app"
+            BlueprintName = "SwiftSample"
+            ReferencedContainer = "container:BasicSwiftSample.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
             BlueprintIdentifier = "9680152A1BC6C7CE001B0926"
             BuildableName = "BasicSwiftSample.app"
             BlueprintName = "BasicSwiftSample"
             ReferencedContainer = "container:BasicSwiftSample.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
