MOBILSDK-2806: add missing logo to invite

--- a/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/foresee_configuration.json
@@ -10,6 +10,7 @@
 	],
     "appName": "Custom Invite Sample",
     "invite": {
+        "logo": "ForeSee_logo",
         "baseColor": [235, 43, 61]
     }
 }
