--- a/AdvancedSample/AdvancedSample/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/foresee_configuration.json
@@ -18,10 +18,22 @@
     "surveyCompletionPageDelay":3
   },
   "notificationType": "IN_SESSION",
-  "measures": {},
+  "measures":
+  [
+      {
+          "surveyId": "mobile_app-en",
+          "daysSinceLaunch": 0,
+          "launchCount": 0,
+          "significantEventThresholds":
+          {
+              "app_test_1": 4
+          }
+      }
+  ],
   "invite":
   {
     "logo": "ForeSee_logo",
     "baseColor": [237, 38, 54]
   }
 }
+
