MOBILSDK-1608: add additoinal criteria and a HOWTO

--- a/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
@@ -5,10 +5,16 @@
   [
     {
       "surveyId": "mobile_app-en",
-      "significantEventThresholds":
-      {
-        "app_test_1": 4
-      }
+      "combinedCriteria":
+      [
+        {
+          "pageViews": 2,
+          "significantEventThresholds":
+          {
+            "app_test_1": 4
+          }
+        }
+      ]
     }
   ],
   "invite":
