MOBILSDK-1608: fix the missing invite logo

--- a/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
@@ -19,7 +19,7 @@
   ],
   "invite":
   {
-    "logo": "ForeSee_logo",
+    "logo": "foresee_logo",
     "baseColor": [237, 38, 54]
   },
   "cppParameters":
