--- a/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
@@ -13,7 +13,7 @@
   ],
   "invite":
   {
-    "logo": "ForeSee_logo",
+    "logo": "foresee_logo",
     "baseColor": [237, 38, 54]
   },
   "cppParameters":
