MOBILSDK-1608: update client/survey IDs

--- a/AdobeExtensionSample/AdobeExtensionSample/foresee_configuration.json
+++ b/AdobeExtensionSample/AdobeExtensionSample/foresee_configuration.json
@@ -1,12 +1,12 @@
 {
-    "clientId":"9NNs9GIBQIVdk1LpDlJpAQ==",
+    "clientId":"FSRTESTINGCODECID12345==",
     "notificationType": "IN_SESSION",
     "measures":
     [
         {
-            "surveyId": "mobile_app-en",
-            "launchCount": 3,
+            "surveyId": "iphone_app_QA",
             "surveyStyle": "modern"
+            "launchCount": 3
         }
     ],
     "invite": {
