--- a/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-  "clientId": "Ij6P1lfZHchO/co10lQ4BQ==",
+  "clientId": "FSRTESTINGCODECID12345==",
   "notificationType": "IN_SESSION",
   "measures":
   [
     {
-      "surveyId": "mobile_app-es",
+      "surveyId": "iphone_app_QA-es",
       "significantEventThresholds":
       {
         "app_test_1": 4
