MOBILSDK-1608: revert to the old client/SID for i18n surveys

--- a/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
@@ -1,11 +1,10 @@
 {
-  "clientId": "FSRTESTINGCODECID12345==",
+  "clientId": "9NNs9GIBQIVdk1LpDlJpAQ==",
   "notificationType": "IN_SESSION",
   "measures":
   [
     {
-      "surveyId": "iphone_app_QA",
-      "surveyStyle": "modern",
+      "surveyId": "mobile_app-en",
       "combinedCriteria":
       [
         {
