--- a/AdvancedSample/AdvancedSample/fr.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/fr.lproj/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-  "clientId": "FSRTESTINGCODECID12345==",
+  "clientId": "9NNs9GIBQIVdk1LpDlJpAQ==",
   "notificationType": "IN_SESSION",
   "measures":
   [
     {
-      "surveyId": "iphone_app_QA-fr",
+      "surveyId": "mobile_app-fr",
       "significantEventThresholds":
       {
         "app_test_1": 4
