MOBILSDK-1608: switch the AdvancedSample back to FSRTESTINGCODECID12345==

--- a/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
@@ -1,10 +1,10 @@
 {
-  "clientId": "9NNs9GIBQIVdk1LpDlJpAQ==",
+  "clientId": "FSRTESTINGCODECID12345==",
   "notificationType": "IN_SESSION",
   "measures":
   [
     {
-      "surveyId": "mobile_app-en",
+      "surveyId": "iphone_app_QA",
       "combinedCriteria":
       [
         {
