MOBILSDK-1608: use the modern survey

--- a/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/es.lproj/foresee_configuration.json
@@ -5,6 +5,7 @@
   [
     {
       "surveyId": "iphone_app_QA_es",
+      "surveyStyle": "modern",
       "significantEventThresholds":
       {
         "app_test_1": 4
