FSMBSDK-2999: add fastane items to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,21 @@ DerivedData
 xcuserdata/
 *.xcworkspace/
 Pods/
+
+# fastlane
+/*.itmsp
+.idea
+.rakeTasks
+spec/fixtures/*.itmsp/*.png
+/integration
+**/report.xml
+**/.bundle
+fastlane/lib/fastlane/plugins/template/.rubocop.yml
+snapshot/example/fastlane/README.md
+snapshot/example/fastlane/screenshots
+fastlane/FastlaneRunner
+fastlane/swift/FastlaneRunner
+vendor
+fastlane/test_output/
+fastlane/.envstore.yml
+.local/
