--- a/bitrise.yml
+++ b/bitrise.yml
@@ -71,19 +71,6 @@ workflows:
         inputs:
         - lane: certificates
     - cocoapods-install@1: {}
-  Build-AdvancedSample:
-    before_run:
-    - Prepare
-    steps:
-    - xcode-archive@2:
-        inputs:
-        - force_code_sign_identity: ForeSee Developer (Personal Team)
-        - force_team_id: B26CZ848JA
-    - deploy-to-bitrise-io@1: {}
-    envs:
-    - opts:
-        is_expand: false
-      BITRISE_SCHEME: AdvancedSample
   Build-BasicSample:
     before_run:
     - Prepare
@@ -98,6 +85,120 @@ workflows:
     - opts:
         is_expand: false
       BITRISE_SCHEME: BasicSample
+  Build-AdvancedSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: AdvancedSample
+  Build-All:
+    steps:
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-BasicSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-AdvancedSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-FeedbackSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-LocalNotificationSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-BasicSwiftSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-CustomInvitationSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+    - trigger-bitrise-workflow@0:
+        inputs:
+        - workflow_id: Build-ContactInvitationSample
+        - api_token: "$BITRISE_APP_TRIGGER_TOKEN"
+  Build-FeedbackSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: FeedbackSample
+  Build-LocalNotificationSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: LocalNotificationSample
+  Build-CustomInvitationSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: CustomInvitationSample
+  Build-ContactInvitationSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: ContactInvitationSample
+  Build-BasicSwiftSample:
+    before_run:
+    - Prepare
+    steps:
+    - xcode-archive@2:
+        inputs:
+        - force_code_sign_identity: ''
+        - force_team_id: ''
+    - cache-pull@2: {}
+    - deploy-to-bitrise-io@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      BITRISE_SCHEME: FeedbackSample
 app:
   envs:
   - opts:
@@ -109,6 +210,6 @@ app:
   - opts:
       is_expand: false
     BITRISE_EXPORT_METHOD: development
-  - opts:
+  - git_url: https://github.com/foreseecode/mobile-fastlane-match
+    opts:
       is_expand: false
-    git_url: https://github.com/foreseecode/mobile-fastlane-match
