--- a/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/foresee_configuration.json
@@ -23,6 +23,11 @@
     "logo": "foresee_logo",
     "baseColor": [237, 38, 54]
   },
+  "survey": {
+    "closeButtonColor": [255, 255, 255],
+    "closeButtonBackgroundColor": [65, 65, 65],
+    "headerColor": [65, 65, 65]
+  },
   "cppParameters":
   {
     "sample_app": "Advanced sample"
