--- a/AdvancedSample/AdvancedSample/Base.lproj/exp_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/exp_configuration.json
@@ -32,16 +32,16 @@
   {
     "sample_app": "Advanced sample"
   },
-  "feedback":
+  "digital":
   {
-    "feedbackSurveys":[
+    "digitalSurveys":[
       {
         "name": "Sample 1",
-        "feedbackId": "AEvfwfp1vY"
+        "surveyId": "AEvfwfp1vY"
       },
       {
         "name": "Sample 2",
-        "feedbackId": "1k9SUBSgFN",
+        "surveyId": "1k9SUBSgFN",
         "surveyCompletionPageDelay": -1
       }
     ],
