--- a/bitrise.yml
+++ b/bitrise.yml
@@ -11,76 +11,109 @@ workflows:
   deploy:
     steps:
     - activate-ssh-key@4:
+        title: Activate the SSH Key
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4: {}
-    - cache-pull@2: {}
+    - git-clone@4: 
+        title: Clone the repo
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
     - script@1:
         title: Do anything with Script step
-    - certificate-and-profile-installer@1: {}
-    - cocoapods-install@1: {}
+    - certificate-and-profile-installer@1: 
+        title: Download and install the Apple code signing certificates and provisioning profile
+    - cocoapods-install@1: 
+        title: Install cocoapods dependicies
     - xcode-test@2:
+        title: Run xcode tests
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
     - xcode-archive@2:
+        title: Archive the Xcode project 
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
         - export_method: "$BITRISE_EXPORT_METHOD"
-    - deploy-to-bitrise-io: {}
-    - cache-push@2: {}
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
+    - cache-push@2: 
+        title: Check whether cache has to be updated based on the Cache Paths and Ignore Paths inputs
   primary:
     steps:
     - activate-ssh-key@4:
+        title: Activate the SSH Key
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4: {}
-    - cache-pull@2: {}
+    - git-clone@4: 
+        title: Clone the repo
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
     - script@1:
         title: Do anything with Script step
-    - certificate-and-profile-installer@1: {}
-    - cocoapods-install@1: {}
+    - certificate-and-profile-installer@1: 
+        title: Download and install the Apple code signing certificates and provisioning profile
+    - cocoapods-install@1: 
+        title: Install cocoapods dependicies
     - xcode-test@2:
+        title: Run xcode tests
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
-    - deploy-to-bitrise-io: {}
-    - cache-push@2: {}
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
+    - cache-push@2: 
+        title: Check whether cache has to be updated based on the Cache Paths and Ignore Paths inputs
   build:
     steps:
     - activate-ssh-key@4:
+        title: Activate the SSH Key
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4: {}
-    - cache-pull@2: {}
+    - git-clone@4: 
+        title: Clone the repo
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
     - script@1:
         title: Do anything with Script step
-    - certificate-and-profile-installer@1: {}
-    - cocoapods-install@1: {}
+    - certificate-and-profile-installer@1: 
+        title: Download and install the Apple code signing certificates and provisioning profile
+    - cocoapods-install@1: 
+        title: Install cocoapods dependicies
     - xcode-test@2:
+        title: Run xcode tests
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
-    - xcode-archive@2: {}
-    - deploy-to-bitrise-io: {}
-    - cache-push@2: {}
+    - xcode-archive@2: 
+        title: Archive the Xcode project
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
+    - cache-push@2: 
+        title: Check whether cache has to be updated based on the Cache Paths and Ignore Paths inputs
   Prepare:
     steps:
     - activate-ssh-key@4:
+        title: Activate the SSH Key
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4: {}
+    - git-clone@4: 
+        title: Clone the repo
     - fastlane@2:
+        title: Run fastlane certificates
         inputs:
         - lane: certificates
-    - cocoapods-install@1: {}
+    - cocoapods-install@1: 
+        title: Install cocoapods dependicies
   Build-BasicSample:
     before_run:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -90,11 +123,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -134,11 +170,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -148,11 +187,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -162,11 +204,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -176,11 +221,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
@@ -190,11 +238,14 @@ workflows:
     - Prepare
     steps:
     - xcode-archive@2:
+        title: Archive the Xcode project
         inputs:
         - force_code_sign_identity: ''
         - force_team_id: ''
-    - cache-pull@2: {}
-    - deploy-to-bitrise-io: {}
+    - cache-pull@2: 
+        title: Downloading the build cache from bitrise.io, and moving the files back to their original place
+    - deploy-to-bitrise-io: 
+        title: Deploy to bitrise
     envs:
     - opts:
         is_expand: false
