VOC-41001 - Updated CustomInvitationSample with Verint Branding.

--- a/CustomInvitationSample/CustomInvitationSample/exp_configuration.json
+++ b/CustomInvitationSample/CustomInvitationSample/exp_configuration.json
@@ -10,8 +10,8 @@
         }
     ],
     "invite": {
-        "logo": "ForeSee_logo",
-        "baseColor": [237, 38, 54]
+        "logo": "v_logo",
+        "baseColor": [43, 101, 242]
     },
     "survey": {
         "closeButtonColor": [255, 255, 255],
