--- a/AdvancedSample/AdvancedSample/es.lproj/exp_configuration.json
+++ b/AdvancedSample/AdvancedSample/es.lproj/exp_configuration.json
@@ -1,23 +1,5 @@
 {
-  "customerId": "FSRTESTINGCODECID12345==",
   "notificationType": "IN_SESSION",
-  "measures":
-  [
-    {
-      "surveyId": "iphone_app_QA_es",
-      "surveyStyle": "modern",
-      "combinedCriteria":
-      [
-        {
-          "pageViews": 2,
-          "significantEventThresholds":
-          {
-            "app_test_1": 4
-          }
-        }
-      ]
-    }
-  ],
   "invite":
   {
     "logo": "v_logo",
@@ -32,19 +14,22 @@
   {
     "sample_app": "Advanced sample (Spanish)"
   },
-  "digital":
-  {
-    "digitalSurveys":[
+  "surveyManagement": {
+    "surveys": [
       {
-        "name": "Sample 1",
-        "surveyId": "AEvfwfp1vY"
-      },
-      {
-        "name": "Sample 2",
-        "surveyId": "1k9SUBSgFN",
-        "surveyCompletionPageDelay": -1
+        "url": "https://survey.vovici.com/se/705E3F052D2CD0F2",
+        "name": "SampleSurveyEs",
+        "combinedCriteria":
+        [
+          {
+            "pageViews": 1,
+            "significantEventThresholds":
+            {
+              "custom_event": 4
+            }
+          }
+        ]
       }
-    ],
-    "surveyCompletionPageDelay": 3
+    ]
   }
 }
