VOC-27080: VOC-27080: VOC-27080: Updated Basic Sample - updated to use SM, updated README.

--- a/BasicSample/BasicSample/exp_configuration.json
+++ b/BasicSample/BasicSample/exp_configuration.json
@@ -1,19 +1,9 @@
 {
-    "customerId":"FSRTESTINGCODECID12345==",
     "notificationType": "IN_SESSION",
-    "measures":
-    [
-        {
-            "surveyId": "iphone_app_QA",
-            "surveyStyle": "modern",
-            "daysSinceLaunch": 0,
-            "launchCount": 0,
-            "significantEventThresholds":
-            {
-                "app_test_1": 4
-            }
-        }
-    ],
+    "cppParameters": 
+    {
+      "sample_app": "Basic sample"
+    },
     "invite": {
         "logo": "v_logo",
         "baseColor": [43, 101, 242]
@@ -22,5 +12,15 @@
         "closeButtonColor": [255, 255, 255],
         "closeButtonBackgroundColor": [65, 65, 65],
         "headerColor": [65, 65, 65]
+    },
+    "surveyManagement": {
+      "surveys": [
+        {
+          "url": "https://survey.vovici.com/se/705E3F053FB8395201",
+          "name": "SampleSurvey",
+          "daysSinceLaunch": 0,
+          "launchCount": 0
+        }
+      ]
     }
 }
