--- a/ContactInvitationSample/ContactInvitationSample/exp_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/exp_configuration.json
@@ -1,13 +1,9 @@
 {
-    "customerId":"FSRTESTINGCODECID12345==",
     "notificationType":"CONTACT",
-    "measures":
-	[
-		{
-			"surveyId": "iphone_app_QA",
-			"launchCount": 0
-		}
-	],
+    "cppParameters":
+    {
+      "sample_app":"Contact Invitation Sample"
+    },
     "appName": "Custom Invite Sample",
     "invite": {
         "logo": "v_logo",
@@ -17,5 +13,17 @@
         "closeButtonColor": [255, 255, 255],
         "closeButtonBackgroundColor": [65, 65, 65],
         "headerColor": [65, 65, 65]
+    },
+    "surveyManagement": {
+        "surveys": [
+            {
+                "campaignId": "0",
+                "groupId": "1885224709",
+                "projectId": "1069037906",
+                "url": "https://survey.vovici.com",
+                "name": "SampleSurvey",
+                "launchCount": 0
+            }
+        ]
     }
 }
