VOC-27080: Updated app name in configuration for the contact invitation sample.

--- a/ContactInvitationSample/ContactInvitationSample/exp_configuration.json
+++ b/ContactInvitationSample/ContactInvitationSample/exp_configuration.json
@@ -4,7 +4,7 @@
     {
       "sample_app":"Contact Invitation Sample"
     },
-    "appName": "Custom Invite Sample",
+    "appName": "Contact Invitation Sample",
     "invite": {
         "logo": "v_logo",
         "baseColor": [43, 101, 242]
