VOC-27080: Updated Custom Invitation Sample - updated to use SM, updated README.

--- a/CustomInvitationSample/CustomInvitationSample/exp_configuration.json
+++ b/CustomInvitationSample/CustomInvitationSample/exp_configuration.json
@@ -1,14 +1,9 @@
 {
-    "customerId":"FSRTESTINGCODECID12345==",
     "notificationType":"IN_SESSION",
-    "measures":
-    [
-        {
-            "surveyId": "iphone_app_QA",
-            "surveyStyle": "modern",
-            "launchCount": 0
-        }
-    ],
+    "cppParameters":
+    {
+        "sample_app":"Custom Invitation Sample"
+    },
     "invite": {
         "logo": "v_logo",
         "baseColor": [43, 101, 242]
@@ -17,5 +12,15 @@
         "closeButtonColor": [255, 255, 255],
         "closeButtonBackgroundColor": [65, 65, 65],
         "headerColor": [65, 65, 65]
+    },
+    "surveyManagement": {
+      "surveys": [
+        {
+          "url": "https://survey.vovici.com/se/705E3F053FB8395201",
+          "name": "SampleSurvey",
+          "daysSinceLaunch": 0,
+          "launchCount": 0
+        }
+      ]
     }
 }
