--- a/LocalNotificationSample/LocalNotificationSample/exp_configuration.json
+++ b/LocalNotificationSample/LocalNotificationSample/exp_configuration.json
@@ -1,16 +1,9 @@
 {
-  "customerId":"FSRTESTINGCODECID12345==",
   "notificationType":"EXIT_INVITE",
-  "measures":
-    [
-        {
-         "surveyId": "iphone_app_QA",
-         "surveyStyle": "modern",
-         "daysSinceLaunch":0,
-         "launchCount":0
-        }
-    ],
-    "invite": {
+  "cppParameters": {
+    "sample_app":"Local Notification Sample"
+  },
+  "invite": {
         "logo": "v_logo",
         "baseColor": [43, 101, 242]
     },
@@ -18,5 +11,15 @@
         "closeButtonColor": [255, 255, 255],
         "closeButtonBackgroundColor": [65, 65, 65],
         "headerColor": [65, 65, 65]
+    },
+    "surveyManagement": {
+      "surveys": [
+        {
+          "url": "https://survey.vovici.com/se/705E3F053FB8395201",
+          "name": "SampleSurvey",
+          "daysSinceLaunch": 0,
+          "launchCount": 0
+        }
+      ]
     }
 }
