--- a/AdvancedSample/AdvancedSample/Base.lproj/exp_configuration.json
+++ b/AdvancedSample/AdvancedSample/Base.lproj/exp_configuration.json
@@ -22,6 +22,7 @@
         "combinedCriteria":
         [
           {
+            "pageViews": 1,
             "significantEventThresholds":
             {
               "custom_event": 4
